@@ -1,6 +1,5 @@
 package uk.gov.justice.digital.job;
 
-import com.github.stefanbirkner.systemlambda.SystemLambda;
 import com.google.common.collect.ImmutableSet;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.junit.jupiter.api.BeforeEach;
@@ -23,8 +22,8 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+import static com.ginsberg.junit.exit.assertions.SystemExitAssertion.assertThatCallsSystemExit;
 import static uk.gov.justice.digital.common.RegexPatterns.parquetFileRegex;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
@@ -91,7 +90,7 @@ class S3DataDeletionJobTest extends SparkTestBase {
                 eq(configuredTables),
                 eq(parquetFileRegex),
                 eq(Duration.ZERO)
-        )).thenReturn(objectsToDelete.stream().map(FileLastModifiedDate::new).collect(Collectors.toList()));
+        )).thenReturn(objectsToDelete.stream().map(FileLastModifiedDate::new).toList());
 
         when(mockS3FileService.deleteObjects(eq(objectsToDelete), deleteObjectsBucketCaptor.capture()))
                 .thenReturn(Collections.emptySet());
@@ -103,15 +102,14 @@ class S3DataDeletionJobTest extends SparkTestBase {
     }
 
     @Test
-    @SuppressWarnings("java:S2699")
-    void shouldFailWhenNoConfigurationIsGiven() throws Exception {
+    void shouldFailWhenNoConfigurationIsGiven() {
         when(mockJobArguments.getConfigKey()).thenThrow(new IllegalStateException("error"));
 
-        SystemLambda.catchSystemExit(() -> underTest.run());
+        assertThatCallsSystemExit(() -> underTest.run());
     }
 
     @Test
-    void shouldExitWithFailureStatusWhenThereIsFailureDeletingSomeFiles() throws Exception {
+    void shouldExitWithFailureStatusWhenThereIsFailureDeletingSomeFiles() {
         ImmutableSet<ImmutablePair<String, String>> configuredTables = ImmutableSet.of(
                 ImmutablePair.of("schema_1", "table_1"),
                 ImmutablePair.of("schema_2", "table_2")
@@ -137,22 +135,22 @@ class S3DataDeletionJobTest extends SparkTestBase {
                 eq(configuredTables),
                 eq(parquetFileRegex),
                 eq(Duration.ZERO)
-        )).thenReturn(objectsToDelete.stream().map(FileLastModifiedDate::new).collect(Collectors.toList()));
+        )).thenReturn(objectsToDelete.stream().map(FileLastModifiedDate::new).toList());
 
         when(mockS3FileService.deleteObjects(eq(objectsToDelete), deleteObjectsBucketCaptor.capture())).thenReturn(failedFiles);
 
-        SystemLambda.catchSystemExit(() -> underTest.run());
+        assertThatCallsSystemExit(() -> underTest.run());
 
         assertThat(listObjectsBucketCaptor.getAllValues(), containsInAnyOrder(bucketsToDeleteFrom.toArray()));
         assertThat(deleteObjectsBucketCaptor.getAllValues(), containsInAnyOrder(bucketsToDeleteFrom.toArray()));
     }
 
     @Test
-    void shouldExitWithFailureStatusWhenConfigServiceThrowsAnException() throws Exception {
+    void shouldExitWithFailureStatusWhenConfigServiceThrowsAnException() {
         when(mockJobArguments.getConfigKey()).thenReturn(TEST_CONFIG_KEY);
         when(mockConfigService.getConfiguredTables(TEST_CONFIG_KEY)).thenThrow(new ConfigServiceException("config error"));
 
-        SystemLambda.catchSystemExit(() -> underTest.run());
+        assertThatCallsSystemExit(() -> underTest.run());
 
         verifyNoInteractions(mockS3FileService);
     }
